# speckit-bmad

./: .gitignore  README.md
.github/agents/: bmd-custom-bmm-analyst.agent.md
shared/: feature_overview.md  sample_data.json
track1-speckit/: README.md  pyproject.toml  run.py
track1-speckit/.specify/memory/: constitution.md
track1-speckit/highlight_selector/: __init__.py  cli.py  models.py  selector.py
track1-speckit/specs/001-highlight-selector/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
track1-speckit/specs/001-highlight-selector/checklists/: requirements.md
track1-speckit/specs/001-highlight-selector/contracts/: input-output.json
track1-speckit/tests/: conftest.py  test_edge_cases.py  test_explanations.py  test_integration.py  test_models.py  test_scoring.py  test_selection.py
track2-bmad/: README.md  demo.py
track2-bmad/_bmad-output/analysis/: brainstorming-session-2026-02-17.md
track2-bmad/_bmad-output/implementation-artifacts/: 1-1-game-event-data-model.md  1-2-userpreference-data-model.md  1-3-scorebreakdown-data-model.md  1-4-highlight-output-model.md  1-5-json-serialization-support.md  2-1-base-importance-scoring.md  2-2-player-preference-boost.md  2-3-team-preference-boost.md  2-4-context-tag-boosts.md  2-5-total-score-calculation-with-breakdown.md  3-1-sort-events-by-score.md  3-2-deterministic-tie-breaking.md  (+34 more)
track2-bmad/highlight_selector/: cli.py  models.py  selector.py
track2-bmad/tests/: test_cli.py  test_integration.py  test_models.py  test_selection.py  test_selector.py
track3-comparison/: README.md
(+8 files in other folders)
